--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             background-color: #1a1a1a;
             font-family: monospace;
         }
+
         #game {
             display: flex;
             flex-direction: row;
@@ -22,6 +23,7 @@
             border: 2px solid #0f0;
             height: 840px;
         }
+
         #map {
             font-size: 16px;
             line-height: 1;
@@ -29,6 +31,7 @@
             color: #0f0;
             margin: 0;
         }
+
         #info {
             display: flex;
             flex-direction: column;
@@ -37,15 +40,18 @@
             color: #0f0;
             height: 100%;
         }
-        #info.hidden {
-            display: none;
-        }
+
+            #info.hidden {
+                display: none;
+            }
+
         #stats {
             font-size: 14px;
             height: 40%;
             padding: 10px;
             border: 1px solid #0f0;
         }
+
         #log {
             font-size: 14px;
             height: 60%;
@@ -53,14 +59,17 @@
             border: 1px solid #0f0;
             overflow-y: auto;
         }
-        #log p {
-            margin: 0;
-            padding: 0;
-            line-height: 1.2;
-        }
+
+            #log p {
+                margin: 0;
+                padding: 0;
+                line-height: 1.2;
+            }
+
         .undiscovered {
             color: #000;
         }
+
         .discovered {
             color: #0f0;
         }
@@ -81,6 +90,8 @@
     <script src="player.js"></script>
     <script src="titlescreen.js"></script>
     <script src="ui.js"></script>
+    <script src="adventurelog.js"></script> 
+    <script src="monsters.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
