--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +22,8 @@
     <script src="player.js"></script>
     <script src="titlescreen.js"></script>
     <script src="ui.js"></script>
+    <script src="items.js"></script>
     <script src="monsters.js"></script>
     <script src="game.js"></script>
-    </body>
+</body>
     </html>
