--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grok Mage Dungeon</title>
+    <link rel="stylesheet" href="4.css">
     <link rel="stylesheet" href="dungeon.css">
 </head>
 <body>
     <div id="game">
+
         <pre id="map"></pre>
+        <div id="splash"></div>
         <div id="info" class="hidden">
             <div id="stats"></div>
             <div id="log"></div>
