item and monster changes
item and monster changes

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
     <link rel="stylesheet" href="dungeon.css">
 </head>
 <body>
+    <div id="splash"></div>
     <div id="game">
+
         <pre id="map"></pre>
-        <div id="splash"></div>
+
     </div>
+
     <div id="ui-layer">
+        <div id="player-info"></div>
         <div id="tabs" class="hidden">
             <button id="close-tabs">X</button>
             <div id="stats"></div>
             <div id="log"></div>
         </div>
+        <div id="player-status"></div>
     </div>
     <script src="state.js"></script>
     <script src="level.js"></script>
