--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div id="ui-layer">
         <div id="player-info"></div>
         <div id="tabs" class="hidden">
-            <button id="close-tabs">X</button>
-            <div id="stats"></div>
+            <!--<button id="close-tabs">X</button>-->
+            <!-- <div id="stats"></div>-->
             <div id="log"></div>
         </div>
         <div id="player-status"></div>
