tooltip and character stat polish

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grok Mage Dungeon</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="4.css">
     <link rel="stylesheet" href="dungeon.css">
+
 </head>
 <body>
     <div id="splash"></div>
@@ -25,6 +27,7 @@
         </div>
         <div id="player-status"></div>
     </div>
+    <script src="utilities.js"></script>
     <script src="state.js"></script>
     <script src="level.js"></script>
     <script src="combat.js"></script>
