complete OO Refactor to ES6 classes
added Data Class to abstract static data and get it our of classes. used getter methods so data source can be changed w/o refactor of other classes

--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
         </div>
         <div id="player-status"></div>
     </div>
+
     <script src="utilities.js"></script>
+    <script src="data.js"></script>
     <script src="state.js"></script>
     <script src="level.js"></script>
     <script src="combat.js"></script>
     <script src="actions.js"></script>
-    <script src="titlescreen.js"></script>
     <script src="ui.js"></script>
     <script src="render.js"></script>
     <script src="items.js"></script>
     <script src="player.js"></script>
     <script src="monsters.js"></script>
     <script src="game.js"></script>
+    <script src="titlescreen.js"></script>
+
 </body>
 </html>
