--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="combat.js"></script>
     <script src="actions.js"></script>
     <script src="ui.js"></script>
-    <script src="player.inventory.js"></script>
+    <script src="playerInventory.js"></script>
     <script src="render.js"></script>
     <script src="items.js"></script>
     <script src="player.js"></script>
