tons of changes - need to commit more often

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
 
     <script src="utilities.js"></script>
+    <script src="audioManager.js"></script>
     <script src="data.js"></script>
     <script src="state.js"></script>
     <script src="level.js"></script>
