--- a/index.html
+++ b/index.html
@@ -1,49 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- index.html-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grok Mage Dungeon</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="4.css">
-    <link rel="stylesheet" href="dungeon.css">
-
+    <link rel="stylesheet" href="/4.css">
+    <link rel="stylesheet" href="/dungeon.css">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
     <div id="splash"></div>
     <div id="game">
-
         <pre id="map"></pre>
-
     </div>
-
     <div id="ui-layer">
         <div id="player-info"></div>
         <div id="tabs" class="hidden">
-            <!--<button id="close-tabs">X</button>-->
-            <!-- <div id="stats"></div>-->
             <div id="log"></div>
         </div>
         <div id="player-status"></div>
     </div>
-
-    <script src="utilities.js"></script>
-    <script src="audioManager.js"></script>
-    <script src="data.js"></script>
-    <script src="state.js"></script>
-    <script src="level.js"></script>
-    <script src="combat.js"></script>
-    <script src="actions.js"></script>
-    <script src="ui.js"></script>
-    <script src="playerInventory.js"></script>
-    <script src="render.js"></script>
-    <script src="items.js"></script>
-    <script src="player.js"></script>
-    <script src="monsters.js"></script>
-    <script src="game.js"></script>
-    <script src="titlescreen.js"></script>
-
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
-
