--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1c.0">
     <title>Grok Mage Dungeon</title>
     <link rel="stylesheet" href="/4.css">
     <link rel="stylesheet" href="/dungeon.css">
