--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grok Mage Dungeon</title>
+    <title>Zukarnii - The Descent!</title>
     <link rel="stylesheet" href="/4.css">
     <link rel="stylesheet" href="/dungeon.css">
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
