--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
         </div>
     </div>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/init.js"></script>
 </body>
 </html>
