transition lock after load bog fixed visual polish in UI systems

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                             <button id="save-games-button"> Save Game </button>
                             <button id="load-games-button"> Load Game </button>
                             <button id="new-game-button"> New Game </button>
-                            <button id="credits-button"> Credits </button>
+                            <button id="about-button"> About </button>
                         </div>
                     </div>
                     
                     <div id="menu-panel">
-                        <h2>Menu Options Detailed Info</h2>
+                        <h2>Menu Option Details</h2>
                         <div id="menu-data-wrapper">
                             <div id="controls-data">
-                                <h3>Controls: </h3><hr /><br />
+                                <h3>Controls:</h3>
                                 <ul>
                                     <li>Arrow keys: Move / Mele Attack</li>
                                     <li>wasd: Move / Mele Attack</li>
@@ -70,7 +70,7 @@
                                 </ul>
                             </div>
                             <div id="map-key-data" style="display:none;">
-                                <h3>Map Key:</h3><hr /><br />
+                                <h3>Map Key:</h3>
                                 <ul>
                                     <li>𓀠: The Battle Mage - (You) </li>
                                     <li> $: Treasure (aka Da Lootz!)</li>
@@ -81,21 +81,21 @@
                                     <li>⇑: Stairs Up (Tier 1 Exit Game)</li>
                                 </ul>
                             </div>
-                            <div id="options-data" style="display:none;"><h3>Options:</h3><hr /><br /></div>
-                            <div id="save-games-data" style="display:none;"><h3>Saved Games:</h3><hr /><br /> </div>
-                            <div id="load-games-data" style="display:none;"><h3>Load Games:</h3><hr /><br /></div>
-                            <div id="new-game-data" style="display:none;"><h3>New Game: - Create Character</h3><hr /><br /></div>
-                            <div id="credits-data" style="display:none;">
-                                <h3>Credits:</h3><hr /><br />
-                                <h4>Developers:</h4><br />
-                                                    <br /><ul>
+                            <div id="options-data" style="display:none;"><h3>Options:</h3></div>
+                            <div id="save-games-data" style="display:none;"><h3>Saved Games:</h3></div>
+                            <div id="load-games-data" style="display:none;"><h3>Load Games:</h3></div>
+                            <div id="new-game-data" style="display:none;"><h3>New Game: - Create Character</h3></div>
+                            <div id="about-data" style="display:none;">
+                                <h3>About:</h3>
+                                <h4>Developers:</h4>                 
+                                <ul>
                                     <li>Creator / Game Director / Lead Engineer: Matt Capitao</li>
-                                </ul><br />
-                                    <h4>AI Devs</h4><br />
-                                                    <br /><ul>
-                                        <li>Supporting AI - Architect / Engineer: Grok3</li>
-                                        <li>Supporting AI - QA / Debug Engineer : GitHub Copilot</li>
-                                    </ul>
+                                </ul>
+                                <h4>AI Devs</h4>
+                                <ul>
+                                    <li>Supporting AI - Architect / Engineer: Grok3</li>
+                                    <li>Supporting AI - QA / Debug Engineer : GitHub Copilot</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
