visually added inventory tabs

--- a/index.html
+++ b/index.html
@@ -144,9 +144,22 @@
                         <h2>Character Stats</h2>
                         <div id="character-stat-wrapper"></div>
                     </div>
+
                     <div id="inventory">
                         <h2>Inventory Items</h2>
-                        <div class="inventory-item-wrapper">
+                        <div id=inventory-window-wrapper>
+                            <div id="inventory-tabs">
+                                <button id="inventory-tab-all" class="inventory-tab-button tab" style="background: #0f0;">All</button>
+                                <button id="inventory-tab-armor" class="inventory-tab-button tab">Armor</button>
+                                <button id="inventory-tab-weapon-melee" class="inventory-tab-button tab">Melee</button>
+                                <button id="inventory-tab-weapon-ranged" class="inventory-tab-button tab">Ranged</button>
+                                <button id="inventory-tab-amulet" class="inventory-tab-button tab">Amulet</button>
+                                <button id="inventory-tab-ring" class="inventory-tab-button tab">Ring</button>
+                                <button id="sort-inventory-tab" class="inventory-tab-button sort">Sort</button>
+                            </div>
+
+                            <div id="inventory-item-wrapper">
+                            </div>
                         </div>
                     </div>
                 </div>
