--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Zukarnii - The Descent!</title>
     <link rel="stylesheet" href="4.css">
     <link rel="stylesheet" href="dungeon.css">
+    <link rel="stylesheet" href="32.css">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
 </head>
-<body>
+<body>w
     <div id="splash"></div>
     
     <div id="game">
