--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zukarii: The Descent</title>
+    <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="4.css">
     <link rel="stylesheet" href="dungeon.css">
     <!--<link rel="stylesheet" href="32.css">-->
@@ -35,7 +36,7 @@
             <!--<pre id="map"></pre>-->
         </div>
 
-        <div id="hud-layer">
+        <div id="hud-layer" style="visibility:hidden;">
             <div id="player-info">
                 <div class="player-info-child">Player: <span id="playerName"></span></div>
                 <div class="player-info-child">Level: <span id="playerLevel"></span></div>
