updates to system init timings

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="splash">
             <canvas id="splash-canvas"></canvas>
             <h1 class="splash-title">Zukarii: The Descent</h1>
-            <div class="splash-menu">
+            <div class="splash-menu" id="splash-menu">
                 <ul>
                     <li class="selected">New Game</li>
                     <li>Load Game</li>
