Added initial Quest traking system!

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
                                     </ul>
-                                       
+
                                 </div>
                                 <div id="about-data" style="display:none;">
                                     <h3>About:</h3>
@@ -158,10 +158,7 @@
 
                     </div>
 
-                    <div id="log-content" class="ui-tab">
-                        <h2>Adventure Log</h2>
-                        <div id="log"></div>
-                    </div>
+
                     <div id="character-content" class="ui-tab">
                         <div id="character">
                             <h2>Equipped Items</h2>
@@ -219,11 +216,22 @@
                             </div>
                         </div>
                     </div>
+
+                    <div id="log-content" class="ui-tab">
+                        <h2>Adventure Log</h2>
+                        <div id="log"></div>
+                    </div>
+                    <div id="journey-content" class="ui-tab">
+                        <div id="journey">
+                            <h2>Journey Progress</h2>
+                            <div id="journey-window-wrapper">
+                                <div id="journey-tabs"></div>
+                                <div id="journey-items-wrapper"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            
-
         </div>
 
     <script type="module" src="init.js"></script>
