added NPCs, added a merchant that can buy unwanted gear from the player!

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="shop-content" class="ui-tab content"></div>
                 </div>
             </div>
         </div>
