updated merchant on Tier 0 to be able to buy items and improved styling of the interface

--- a/index.html
+++ b/index.html
@@ -230,7 +230,33 @@
                             </div>
                         </div>
                     </div>
-                    <div id="shop-content" class="ui-tab content"></div>
+                    <div id="shop-content" class="ui-tab content">
+
+                        <div id="shop-left">
+                            <div id="shop-info">
+                                <h2 id="shop-type"></h2>
+                                <p>Right-Click or Drag Items to Buy/Sell</p>
+                            </div>
+                            <div id="shop-items">
+                              
+                            </div>
+                        </div>
+                        <div id="shop-inventory-wrapper">
+                            <h2>Inventory Items</h2>
+                            <div id="inventory-window-wrapper">
+                                <div id="shop-inventory-tabs">
+                                    <button id="inventory-tab-all" class="inventory-tab-button tab active">All</button>
+                                    <button id="inventory-tab-armor" class="inventory-tab-button tab">Armor</button>
+                                    <button id="inventory-tab-weapon-melee" class="inventory-tab-button tab">Melee</button>
+                                    <button id="inventory-tab-weapon-ranged" class="inventory-tab-button tab">Ranged</button>
+                                    <button id="inventory-tab-amulet" class="inventory-tab-button tab">Amulet</button>
+                                    <button id="inventory-tab-ring" class="inventory-tab-button tab">Ring</button>
+                                    <button id="sort-inventory-tab" class="inventory-tab-button sort">Sort</button>
+                                </div>
+                                <div id="shop-inventory-wrapper-inner"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
