--- a/index.html
+++ b/index.html
@@ -8,12 +8,33 @@
     <link rel="stylesheet" href="4.css">
     <link rel="stylesheet" href="dungeon.css">
     <!--<link rel="stylesheet" href="32.css">-->
-        <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-        <link rel="shortcut icon" href="favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-        <link rel="manifest" href="site.webmanifest" />
-    </head>
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <!-- Conditional Google Analytics Tracking Code -->
+    <script>
+        // Check if the host is game.zukarii.com
+        if (window.location.host === 'game.zukarii.com') {
+            // Create script element for gtag.js
+            const gtagScript = document.createElement('script');
+            gtagScript.async = true;
+            gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-74ZF550HWM';
+            document.head.appendChild(gtagScript);
+
+            // Create script element for gtag config
+            const configScript = document.createElement('script');
+            configScript.innerHTML = `
+                    window.dataLayer = window.dataLayer || [];
+                    function gtag(){dataLayer.push(arguments);}
+                    gtag('js', new Date());
+                    gtag('config', 'G-74ZF550HWM');
+                `;
+            document.head.appendChild(configScript);
+        }
+    </script>
+</head>
     <body>
         <div id="splash">
             <canvas id="splash-canvas"></canvas>
