--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
     <!-- Conditional Google Analytics Tracking Code -->
+    <!-- Conditional Google Analytics Tracking Code -->
     <script>
         // Check if the host is game.zukarii.com
         if (window.location.host === 'game.zukarii.com') {
