corrected field labels

--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
         // Only track events on game.zukarii.com (where GA4 is loaded)
         if (window.location.host === 'game.zukarii.com') {
             // Get the elements
-            const startNewGameButton = document.getElementById('start-new-game');
-            const saveNameInput = document.getElementById('save-name-input');
+            const startNewGameButton = document.getElementById('start-new-game-button');
+            const saveNameInput = document.getElementById('player-name-input');
 
             // Check if both elements exist before proceeding
             if (startNewGameButton && saveNameInput) {
