created generateStar method in levelsystem and replaced all redundant code for stair creation

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <div class="player-info-child">Level: <span id="playerLevel"></span></div>
             <div class="player-info-child">Dungeon Tier: <span id="dungeonTier"></span></div>
             <div class="player-info-child">Gold: <span id="playerGold"></span></div>
+            <div class="player-info-child">Ashen Shards: <span id="playerShards"></span></div>
+            <div class="player-info-child">Portal Bindings: <span id="portalBinding"></span></div>
+            
         </div>
 
         <canvas id="minimap-canvas" width="248" height="138"></canvas>
