major updates to  movement and collision!

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div class="player-info-child">Level: <span id="playerLevel"></span></div>
             <div class="player-info-child">Dungeon Tier: <span id="dungeonTier"></span></div>
             <div class="player-info-child">Gold: <span id="playerGold"></span></div>
+            <div class="player-info-child">Speed: <span id="playerSpeed"></span>%</div>
             <div class="player-info-child">Ashen Shards: <span id="playerShards"></span></div>
             <div class="player-info-child">Portal Bindings: <span id="portalBinding"></span></div>
 
